--- a/app/src/main/res/layout/button_scroller.xml
+++ b/app/src/main/res/layout/button_scroller.xml
@@ -7,11 +7,9 @@
     android:scrollbars="none">
 
     <GridLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:columnCount="2"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
         android:paddingTop="20dp"
         android:layout_marginBottom="5dp">
 
